--- a/index.html
+++ b/index.html
@@ -10,21 +10,37 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  <!-- Sign-up form start -->
-  Stay updated!
-  Join 60,000+ product managers receiving monthly updates on:
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
-  Email address
-  email@company.com
-  Subscribe to monthly newsletter
-  <!-- Sign-up form end -->
-  <!-- Success message start -->
-  Thanks for subscribing!
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-  Dismiss message
-  <!-- Success message end -->
+  <div class="main">
+    <div class="wrapper">
+      <div class="card">
+        <header>
+          <img src="./assets/images/illustration-sign-up-mobile.svg" alt="A screen, a tab, a graph, and a number">
+        </header>
+        <div class="body-wrapper">
+          <h1>Stay updated!</h1>
+          <p>Join 60,000+ product managers receiving monthly updates on:</p>
+          <ul class="checklist">
+            <li>
+              <img src="./assets/images/icon-list.svg" alt="A checkmark within a red circle">
+              <p>Product discovery and building what matters</p>
+            </li>
+            <li>
+              <img src="./assets/images/icon-list.svg" alt="A checkmark within a red circle">
+              <p>Measuring to ensure updates are a success</p>
+            </li>
+            <li>
+              <img src="./assets/images/icon-list.svg" alt="A checkmark within a red circle">
+              <p>And much more!</p>
+            </li>
+          </ul>
+          <p>Email address</p>
+          <div class="sign-up">
+            <input type="text" placeholder="email@company.com">
+            <button>Subscribe to monthly newsletter</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
