css on mobile start

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="main">
-    <div class="wrapper">
+    <div class="wrapper center">
       <div class="card">
         <header>
           <img src="./assets/images/illustration-sign-up-mobile.svg" alt="A screen, a tab, a graph, and a number">
@@ -33,10 +33,10 @@
               <p>And much more!</p>
             </li>
           </ul>
-          <p>Email address</p>
+          <p class="email-address">Email address</p>
           <div class="sign-up">
             <input type="text" placeholder="email@company.com">
-            <button>Subscribe to monthly newsletter</button>
+            <button onclick="location.href='success.html';">Subscribe to monthly newsletter</button>
           </div>
         </div>
       </div>
