--- a/success.html
+++ b/success.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./assets/css/typeset.css">
   <link rel="stylesheet" href="./assets/css/reset.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/success.css">
 </head>
 <body>
   <div class="main">
@@ -15,8 +15,8 @@
       <div class="card">
         <img src="./assets/images/icon-success.svg" alt="A larger checkmark in a red circle">
         <h1>Thanks for<br>Subscribing!</h1>
-        <p>A confirmation email has been sent to<br>ash@loremcompany.com. Please open it and<br>click the button inside to confirm your subscription</p>
-        <button>Dismiss message</button>
+        <p>A confirmation email has been sent to<br><span>ash@loremcompany.com</span>. Please open it and<br>click the button inside to confirm your subscription</p>
+        <button onclick="location.href='index.html';">Dismiss message</button>
       </div>
     </div>
   </div>
