first fork merge

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </li>
             <li>
               <img src="./assets/images/icon-list.svg" alt="A checkmark within a red circle">
-              <p>Measuring to ensure updates are a success</p>
+              <p>Measuring to ensure updates are a success add to the unifing device.</p>
             </li>
             <li>
               <img src="./assets/images/icon-list.svg" alt="A checkmark within a red circle">
